PROJECT (lazy-random)
set (VERSION "0.4")
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE (Boost COMPONENTS thread program_options system REQUIRED)
FIND_PACKAGE (Crypto++ REQUIRED)

ADD_SUBDIRECTORY(src)

INSTALL (FILES ChangeLog COPYING INSTALL README
  DESTINATION share/doc/lazy-random-${VERSION}
  )
